# uc6-app

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  openapi.yml  sample_input.json  setup.cfg
models/: transformation.py
simulation_controller/: matcalc_process.py  simulation.py  simulation_manager.py
simulation_controller/templates/: Scheil.mcs  equilibrium.mcs
