[metadata]
name = marketplace_matcalc_app
version = v0.0.1
description = Simple application to run a limited MatCalc simulation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/materials-marketplace/matcalc-app
author = Pablo de Andres, Lukas Kertsch, Sidharth Suresh
author_email = pablo.de.andres@iwm.fraunhofer.de, lukas.kertsch@iwm.fraunhofer.de, sidharth.suresh@iwm.fraunhofer.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    fastapi==0.75.2
    marketplace-standard-app-api~=0.3
    matplotlib<4.0.0
    packaging==21.3
    pika~=1.2
    requests~=2.26
    uvicorn<1.0.0
python_requires = >=3.8
